--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,8 @@
       <button class="mdl-button mdl-js-button mdl-button--icon" id="menu-lower-left">
         <i class="material-icons">more_vert</i>
       </button>
+      
+      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-orange.min.css" />
 
       <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="menu-lower-left">
         {% for option in site.more_vert %}
